# cnn-matching

./: .gitignore  cnnmatching.py  evaluate.py  load_dataset.py  plotmatch.py  pyproject.toml  readme.md
lib/: cbam.py  cnn_feature.py  mbv2_ca.py  model.py  pyramid.py
