[project]
name = "cnn-matching"
version = "0.1.0"
description = "Image matching with CNN features"
readme = "readme.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "imageio>=2.34.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "opencv-python>=4.10.0.0",
    "scikit-image>=0.22.0",
    "scipy>=1.11.0",
    "torch>=2.7.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
